--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </li>
 
-            <li class=""><a href="">Connect Wallet</a></li>
+            <li class="btn"><a href="">Connect Wallet</a></li>
         </ul>
     </nav>
     <!-- Navbar ends -->
