--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <!-- Navbar starts-->
-    <nav class="container navbar py-10">
-        <ul class="flex justify-between items-center ">
+    <nav class=" navbar fixed left-0 top-0 bg-inherit">
+        <ul class="flex container justify-between items-center ">
             <li class="logo">
                 <a href="">
                     <img src="./assets/images/logo.svg" alt="" />
@@ -27,10 +27,23 @@
                 </ul>
             </li>
 
-            <li class="btn"><a href="">Connect Wallet</a></li>
+            <li class="btn btn-primary-outline"><a href="">Connect Wallet</a></li>
+            <li id="menu-btn">
+                <img src="./assets/icons/menu.svg" alt="">
+            </li>
+        </ul>
+    </nav>
+
+    <nav class="mobile-navbar ">
+        <ul class="flex gap-10 items-center flex-col">
+            <li><a href="">Explore</a></li>
+            <li><a href="">Creators</a></li>
+            <li><a href="">Community</a></li>
+            <li class="btn btn-primary-outline"><a href="">Connect Wallet</a></li>
         </ul>
     </nav>
     <!-- Navbar ends -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
