--- a/index.html
+++ b/index.html
@@ -43,7 +43,62 @@
         </ul>
     </nav>
     <!-- Navbar ends -->
+    <div class="container">
+        <!-- hero section starts -->
+        <section class="section hero">
+
+            <div class="hero__top grid grid-cols-2 gap-10 h-full">
+                <!-- left -->
+                <div class="h-full flex items-start justify-evenly flex-col">
+                    <h1>Explore, Buy and Sell the <span>Best NFTs!</span></h1>
+                    <div class="flex items-center justify-self-center gap-10">
+                        <button class="btn btn-primary">Explore</button>
+                        <button class="btn btn-primary-outline">Create</button> 
+                    </div>
+
+                    <div class="flex items-center justify-between gap-5">
+                        <div class="hero-stat-card flex flex-col ">
+                            <h2 class="text-center">32k+</h2>
+                            <p class="text-center ">Artworks</p>
+                        </div>
+
+                        <div class="hero-stat-card flex flex-col gap-3 ">
+                            <h2 class="text-center">20k+</h2>
+                            <p class="text-center ">Auctions</p>
+                        </div>
+
+                        <div class="hero-stat-card flex flex-col gap-3 ">
+                            <h2 class="text-center">12k+</h2>
+                            <p class="text-center ">Creators</p>
+                        </div>
+
+                    </div>
+                    
+                </div>
+                <!-- right -->
+                <div>
+                    <h1>right</h1>
+                </div>
+            </div>
+
+        </section>
+        <!-- hero section ends -->
+    </div>
+
+
+
+
+
+
+
+
+
     <script src="./script.js"></script>
+
+
+
+
+
 </body>
 
 </html>
